# linear-api

./: .env.example  .gitignore  HANDOFF.md  LICENSE  README.md  SKILL.md  pyproject.toml
.claude/commands/: linear.md
docs/: Linear-API-Integration-Plan.md
references/: auth.md  common-queries.md  mutations-cheatsheet.md  rate-limits.md  schema-summary.md  webhooks.md
scripts/: client_credentials_token.py  linear.py  oauth_dance.py  oauth_refresh.py
scripts/examples/: create_issue.py  list_my_issues.py  paginate_issues.py  subscribe_webhook.py
tests/: test_linear_client.py
