[project]
name = "linear-api"
version = "0.1.0"
description = "Linear API as a Claude Code skill — progressive discovery over GraphQL, no MCP"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Andy" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
